--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="grid-container">
         <div class="grid-item1">
              <ul>
-                <li><p>Obafemi Awolowo University, Osun state, Nigeria</li>
+                <li>Obafemi Awolowo University, Osun state, Nigeria</li>
             </ul>
             <p class="qua">Qualification: <i class="degree">Bachelor of Art degree,English Language</i></p>
             <p class="grade">Class of Grade:Third Class</p>
@@ -35,7 +35,7 @@
       
         <div class="grid-item3">
             <ul>
-                <li><P>Adventist Secondary School,ile-ife, Osun State</P></li>
+                <li>Adventist Secondary School,ile-ife, Osun State</li>
             </ul>
             <p class="qua">Qualification:<i>Senior School leaving Certificate</i</p>
         </div>
@@ -63,7 +63,7 @@
     </div>
     <div class="work3">
         <ul>
-            <li>Lagos State Ministry od Special Duties and Inter-Governmental Relations</li>
+            <li>Lagos State Ministry of Special Duties and Inter-Governmental Relations</li>
         </ul>
         <p>Job Positon: <i>Public Relation Offficer</i></p>
         <p>Duration: MAR 2020- FEB 2021</p>
@@ -72,7 +72,7 @@
         <p><u><i>KEY ACTIVITIES</i></u></p>
             <ul>
                 <li>Generating Press Release for the Ministry</li>
-                <li>Everyday use of Microsoft Offic for Information manipulation and Management</li>
+                <li>Everyday use of Microsoft Office for Information manipulation and Management</li>
                 <li>Cameraman (Both the Camera and the video Recorder)</li>
             </ul>
         </div>
@@ -86,7 +86,7 @@
             <li>Strong work ethics.</li>
             <li>Good technical skills.</li>
             <li>Good technical skills.</li>
-            <li>Being able to work with leass supervision.</li>
+            <li>Being able to work with less supervision.</li>
             <li>Time Management</li>
         </ul>
     </div>
@@ -94,7 +94,7 @@
     <div class="tech">
         <h3><i>TECHNICAL SKILLS</i></h3>
         <ul>
-            <li>Social Media Platform(Twitter, Facbook, Instagram)</li>
+            <li>Social Media Platform (Twitter, Facbook, Instagram)</li>
             <li>Public Relations Skills</li>
             <li>Information Manipulation and Management</li>
             <li>Photography and Videography</li>
